@@ -50,11 +50,14 @@ asort_by_key($items, 'sortorder');
  * Permissions
  */
 $dbItems = API::Item()->get(array(
+	'itemids' => zbx_objectValues($items, 'itemid'),
+	'filter' => array(
+		'flags' => array(ZBX_FLAG_DISCOVERY_NORMAL, ZBX_FLAG_DISCOVERY_PROTOTYPE, ZBX_FLAG_DISCOVERY_CREATED)
+	),
 	'webitems' => true,
-	'itemids' => zbx_objectValues($items, 'itemid')
+	'preservekeys' => true
 ));
 
-$dbItems = zbx_toHash($dbItems, 'itemid');
 foreach ($items as $item) {
 	if (!isset($dbItems[$item['itemid']])) {
 		access_deny();
@@ -90,8 +93,6 @@ if ($isDataValid) {
 		$graph->switchPie3D();
 	}
 	$graph->showLegend(getRequest('legend', 0));
-
-	unset($host);
 
 	if (isset($_REQUEST['period'])) {
 		$graph->setPeriod($_REQUEST['period']);
