@@ -12,6 +12,7 @@ Changes for 2.2.2rc1
 New features:
 
 Bug fixes:
+..F....... [ZBX-7490] fixed chart with prototype items displaing in graphs configuration page (Eduard)
 A......... [ZBX-7454] fixed automatic changing host inventory mode from 'Automatic' to 'Manual' when updating host with no 'inventory_mode' parameter set (Ivo)
 ..F....... [ZBX-7417] expanded function last() with no parameters in map element labels and graph names (Ivo)
 A......... [ZBX-7338] fixed screen item validation (Eduard)
